--- a/pages/index.html
+++ b/pages/index.html
@@ -627,7 +627,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="/wowoRoom-booking/js/config.js"></script>
-    <script src="js/index-animation.js"></script>
+    <script src="/wowoRoom-booking/js/index-animation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/wowoRoom-booking/js/index.js"></script>
   </body>
